# Conway-s-Game-of-Life

./: CMakeLists.txt  game_of_life.cpp  game_of_life.h  main.cpp  main_gui.cpp  main_gui.h
